[gd_scene load_steps=4 format=3 uid="uid://dlx6r86vgqwrp"]

[ext_resource type="Script" uid="uid://cosm4pa1c0qdm" path="res://scripts/ui/talent_tree.gd" id="1_pprm8"]
[ext_resource type="Script" uid="uid://b3xs4oyu6lnph" path="res://scripts/ui/talent_info.gd" id="2_eavx0"]
[ext_resource type="Script" uid="uid://dky07g0w5skxh" path="res://scripts/ui/talent_character_changes.gd" id="3_4ptvx"]

[node name="TalentTree" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pprm8")

[node name="TreeContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 268.0
offset_right = -344.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 75

[node name="Specialization1" type="VBoxContainer" parent="TreeContainer"]
layout_mode = 2

[node name="Tier0" type="HBoxContainer" parent="TreeContainer/Specialization1"]
layout_mode = 2

[node name="Tier1" type="HBoxContainer" parent="TreeContainer/Specialization1"]
layout_mode = 2

[node name="Tier2" type="HBoxContainer" parent="TreeContainer/Specialization1"]
layout_mode = 2

[node name="Tier3" type="HBoxContainer" parent="TreeContainer/Specialization1"]
layout_mode = 2

[node name="Tier4" type="HBoxContainer" parent="TreeContainer/Specialization1"]
layout_mode = 2

[node name="Tier5" type="HBoxContainer" parent="TreeContainer/Specialization1"]
layout_mode = 2

[node name="Tier6" type="HBoxContainer" parent="TreeContainer/Specialization1"]
layout_mode = 2

[node name="Tier7" type="HBoxContainer" parent="TreeContainer/Specialization1"]
layout_mode = 2

[node name="Specialization2" type="VBoxContainer" parent="TreeContainer"]
layout_mode = 2

[node name="Tier0" type="HBoxContainer" parent="TreeContainer/Specialization2"]
layout_mode = 2

[node name="Tier1" type="HBoxContainer" parent="TreeContainer/Specialization2"]
layout_mode = 2

[node name="Tier2" type="HBoxContainer" parent="TreeContainer/Specialization2"]
layout_mode = 2

[node name="Tier3" type="HBoxContainer" parent="TreeContainer/Specialization2"]
layout_mode = 2

[node name="Tier4" type="HBoxContainer" parent="TreeContainer/Specialization2"]
layout_mode = 2

[node name="Tier5" type="HBoxContainer" parent="TreeContainer/Specialization2"]
layout_mode = 2

[node name="Tier6" type="HBoxContainer" parent="TreeContainer/Specialization2"]
layout_mode = 2

[node name="Tier7" type="HBoxContainer" parent="TreeContainer/Specialization2"]
layout_mode = 2

[node name="Specialization3" type="VBoxContainer" parent="TreeContainer"]
layout_mode = 2

[node name="Tier0" type="HBoxContainer" parent="TreeContainer/Specialization3"]
layout_mode = 2

[node name="Tier1" type="HBoxContainer" parent="TreeContainer/Specialization3"]
layout_mode = 2

[node name="Tier2" type="HBoxContainer" parent="TreeContainer/Specialization3"]
layout_mode = 2

[node name="Tier3" type="HBoxContainer" parent="TreeContainer/Specialization3"]
layout_mode = 2

[node name="Tier4" type="HBoxContainer" parent="TreeContainer/Specialization3"]
layout_mode = 2

[node name="Tier5" type="HBoxContainer" parent="TreeContainer/Specialization3"]
layout_mode = 2

[node name="Tier6" type="HBoxContainer" parent="TreeContainer/Specialization3"]
layout_mode = 2

[node name="Tier7" type="HBoxContainer" parent="TreeContainer/Specialization3"]
layout_mode = 2

[node name="TalentInfo" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_eavx0")

[node name="TalentCharacterChanges" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_4ptvx")

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 37.0
offset_bottom = 15.5
grow_vertical = 2
text = "Exit"

[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
